{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 173,
  "lineage": "a99eb407-8edd-78d9-477d-d9ea866f79c7",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-052a266a4a1f5826c",
            "domain": "vpc",
            "id": "eipalloc-0f0a69d6a35d64f62",
            "network_interface": "eni-07ba2a83d313ba6fe",
            "private_dns": "ip-10-1-12-250.ec2.internal",
            "private_ip": "10.1.12.250",
            "public_dns": "ec2-52-72-43-48.compute-1.amazonaws.com",
            "public_ip": "52.72.43.48",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "csidriver3 nat 0"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0816fbacddff43c35",
            "domain": "vpc",
            "id": "eipalloc-087c623c05e971ff1",
            "network_interface": "eni-0346e0880ac05a0fc",
            "private_dns": "ip-10-1-24-131.ec2.internal",
            "private_ip": "10.1.24.131",
            "public_dns": "ec2-52-73-160-95.compute-1.amazonaws.com",
            "public_ip": "52.73.160.95",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "csidriver3 nat 1"
            },
            "vpc": true
          },
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-02b4f5f98ee6dc5eb",
            "domain": "vpc",
            "id": "eipalloc-0cb07fde9ec744fe8",
            "network_interface": "eni-0b90c63be5f733bda",
            "private_dns": "ip-10-1-35-71.ec2.internal",
            "private_ip": "10.1.35.71",
            "public_dns": "ec2-54-159-211-238.compute-1.amazonaws.com",
            "public_ip": "54.159.211.238",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "csidriver3 nat 2"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:internet-gateway/igw-0fc50dacd61a1a9e9",
            "id": "igw-0fc50dacd61a1a9e9",
            "owner_id": "316441501734",
            "tags": {
              "Name": "csidriver3"
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0a69d6a35d64f62",
            "id": "nat-0994593289bb3f92b",
            "network_interface_id": "eni-07ba2a83d313ba6fe",
            "private_ip": "10.1.12.250",
            "public_ip": "52.72.43.48",
            "subnet_id": "subnet-0cf787fdf903233fa",
            "tags": {
              "Name": "csidriver3 0"
            }
          },
          "dependencies": [
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-087c623c05e971ff1",
            "id": "nat-0cc2f1fad108432a6",
            "network_interface_id": "eni-0346e0880ac05a0fc",
            "private_ip": "10.1.24.131",
            "public_ip": "52.73.160.95",
            "subnet_id": "subnet-00825b0c22de929c7",
            "tags": {
              "Name": "csidriver3 1"
            }
          },
          "dependencies": [
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cb07fde9ec744fe8",
            "id": "nat-01f5bbd9293cbc15e",
            "network_interface_id": "eni-0b90c63be5f733bda",
            "private_ip": "10.1.35.71",
            "public_ip": "54.159.211.238",
            "subnet_id": "subnet-07bc9c1de2671cbca",
            "tags": {
              "Name": "csidriver3 2"
            }
          },
          "dependencies": [
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_route",
      "name": "private-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09ab3f270cf84374a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0994593289bb3f92b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ab3f270cf84374a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fe197ff98e11057f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0cc2f1fad108432a6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fe197ff98e11057f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09ff106eb05ab60361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-01f5bbd9293cbc15e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09ff106eb05ab6036",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_route",
      "name": "public-default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fc50dacd61a1a9e9",
            "id": "r-rtb-0487e18c6199c02541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0487e18c6199c0254",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09ab3f270cf84374a",
            "owner_id": "316441501734",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0994593289bb3f92b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csidriver3 private 0"
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0fe197ff98e11057f",
            "owner_id": "316441501734",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0cc2f1fad108432a6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csidriver3 private 1"
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09ff106eb05ab6036",
            "owner_id": "316441501734",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-01f5bbd9293cbc15e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csidriver3 private 2"
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0487e18c6199c0254",
            "owner_id": "316441501734",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc50dacd61a1a9e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "csidriver3 public"
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd6ac789dbe9a01e",
            "route_table_id": "rtb-09ab3f270cf84374a",
            "subnet_id": "subnet-0f8234ca7c200aaef"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0526ab4760a7a4ae6",
            "route_table_id": "rtb-0fe197ff98e11057f",
            "subnet_id": "subnet-0dbcfe11f9996dfe1"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e543cf618970073e",
            "route_table_id": "rtb-09ff106eb05ab6036",
            "subnet_id": "subnet-0145f99f7dcf27d95"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d91e2385c9fad6c0",
            "route_table_id": "rtb-0487e18c6199c0254",
            "subnet_id": "subnet-0cf787fdf903233fa"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0b82b5453b4e881",
            "route_table_id": "rtb-0487e18c6199c0254",
            "subnet_id": "subnet-00825b0c22de929c7"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce8568e42f93fcb8",
            "route_table_id": "rtb-0487e18c6199c0254",
            "subnet_id": "subnet-07bc9c1de2671cbca"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:security-group/sg-0a3deb94b394ce114",
            "description": "This will allow the cluster to access this volume and use it.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a3deb94b394ce114",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS For EKS Cluster",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-056b69476988f6a24"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "csidriver3",
            "name_prefix": null,
            "owner_id": "316441501734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_eks_cluster.cluster",
            "module.cluster.aws_security_group.cluster",
            "module.cluster.aws_vpc.nodes"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:security-group/sg-056b69476988f6a24",
            "description": "csidriver3 cluster",
            "egress": [],
            "id": "sg-056b69476988f6a24",
            "ingress": [],
            "name": "csidriver3-cluster",
            "name_prefix": null,
            "owner_id": "316441501734",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "csidriver3-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:subnet/subnet-0f8234ca7c200aaef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.64.0/18",
            "id": "subnet-0f8234ca7c200aaef",
            "map_public_ip_on_launch": false,
            "owner_id": "316441501734",
            "tags": {
              "Name": "csidriver3 private 0",
              "kubernetes.io/cluster/csidriver3": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:subnet/subnet-0dbcfe11f9996dfe1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.128.0/18",
            "id": "subnet-0dbcfe11f9996dfe1",
            "map_public_ip_on_launch": false,
            "owner_id": "316441501734",
            "tags": {
              "Name": "csidriver3 private 1",
              "kubernetes.io/cluster/csidriver3": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:subnet/subnet-0145f99f7dcf27d95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.192.0/18",
            "id": "subnet-0145f99f7dcf27d95",
            "map_public_ip_on_launch": false,
            "owner_id": "316441501734",
            "tags": {
              "Name": "csidriver3 private 2",
              "kubernetes.io/cluster/csidriver3": "shared",
              "kubernetes.io/role/internal-elb": ""
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:subnet/subnet-0cf787fdf903233fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/20",
            "id": "subnet-0cf787fdf903233fa",
            "map_public_ip_on_launch": false,
            "owner_id": "316441501734",
            "tags": {
              "Name": "csidriver3 public 0",
              "kubernetes.io/cluster/csidriver3": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:subnet/subnet-00825b0c22de929c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.16.0/20",
            "id": "subnet-00825b0c22de929c7",
            "map_public_ip_on_launch": false,
            "owner_id": "316441501734",
            "tags": {
              "Name": "csidriver3 public 1",
              "kubernetes.io/cluster/csidriver3": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:subnet/subnet-07bc9c1de2671cbca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.32.0/20",
            "id": "subnet-07bc9c1de2671cbca",
            "map_public_ip_on_launch": false,
            "owner_id": "316441501734",
            "tags": {
              "Name": "csidriver3 public 2",
              "kubernetes.io/cluster/csidriver3": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-002dc6760e53ae27a"
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:316441501734:vpc/vpc-002dc6760e53ae27a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08fa974e057375d62",
            "default_route_table_id": "rtb-0e4187c829c0d56d9",
            "default_security_group_id": "sg-01c079c6a0f1fe858",
            "dhcp_options_id": "dopt-7caf4b06",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-002dc6760e53ae27a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e4187c829c0d56d9",
            "owner_id": "316441501734",
            "tags": {
              "Name": "csidriver3",
              "kubernetes.io/cluster/csidriver3": "shared"
            }
          },
          "dependencies": [
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rack.module.api.module.k8s",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "csidriver3-system/api",
            "load_balancer_ingress": [
              {
                "hostname": "a121edc50b3194d7c90ffc55e308cce5-778392767ac12122.elb.us-east-1.amazonaws.com",
                "ip": ""
              }
            ],
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt",
                  "convox.com/backend-protocol": "https",
                  "eks.amazonaws.com/role-arn": "arn:aws:iam::316441501734:role/convox/csidriver3-api",
                  "iam.amazonaws.com/role": "arn:aws:iam::316441501734:role/convox/csidriver3-api",
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/backend-protocol": "https",
                  "nginx.ingress.kubernetes.io/proxy-read-timeout": "99999",
                  "nginx.ingress.kubernetes.io/proxy-send-timeout": "99999"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "service": "api",
                  "system": "convox"
                },
                "name": "api",
                "namespace": "csidriver3-system",
                "resource_version": "2926",
                "self_link": "/apis/extensions/v1beta1/namespaces/csidriver3-system/ingresses/api",
                "uid": "9046c298-a054-45bf-8fcb-03afe361556d"
              }
            ],
            "spec": [
              {
                "backend": [],
                "rule": [
                  {
                    "host": "api.eb35b5e724e996a0.convox.cloud",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "api",
                                "service_port": "5443"
                              }
                            ],
                            "path": ""
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "api.eb35b5e724e996a0.convox.cloud"
                    ],
                    "secret_name": "api-certificate"
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_eks_cluster.cluster",
            "module.cluster.aws_eks_node_group.cluster",
            "module.cluster.aws_iam_openid_connect_provider.cluster",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_ec2_readonly",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route.private-default",
            "module.cluster.aws_route.public-default",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_route_table_association.private",
            "module.cluster.aws_route_table_association.public",
            "module.cluster.aws_security_group.cluster",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current",
            "module.cluster.null_resource.delay_cluster",
            "module.cluster.null_resource.iam",
            "module.cluster.null_resource.network",
            "module.cluster.random_id.node_group",
            "module.rack.module.api.aws_iam_role.api",
            "module.rack.module.api.data.aws_iam_policy_document.assume_api",
            "module.rack.module.api.module.k8s.kubernetes_service.api",
            "module.rack.module.k8s.kubernetes_namespace.system",
            "module.rack.module.router.data.http.alias",
            "module.rack.module.router.kubernetes_service.router"
          ]
        }
      ]
    },
    {
      "module": "module.rack.module.api.module.k8s",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "csidriver3-system/kubernetes",
            "load_balancer_ingress": [
              {
                "hostname": "a121edc50b3194d7c90ffc55e308cce5-778392767ac12122.elb.us-east-1.amazonaws.com",
                "ip": ""
              }
            ],
            "metadata": [
              {
                "annotations": {
                  "cert-manager.io/cluster-issuer": "letsencrypt",
                  "eks.amazonaws.com/role-arn": "arn:aws:iam::316441501734:role/convox/csidriver3-api",
                  "iam.amazonaws.com/role": "arn:aws:iam::316441501734:role/convox/csidriver3-api",
                  "kubernetes.io/ingress.class": "nginx",
                  "nginx.ingress.kubernetes.io/use-regex": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "service": "api",
                  "system": "convox"
                },
                "name": "kubernetes",
                "namespace": "csidriver3-system",
                "resource_version": "2927",
                "self_link": "/apis/extensions/v1beta1/namespaces/csidriver3-system/ingresses/kubernetes",
                "uid": "693d3f01-f364-4f36-9b8f-d86498683532"
              }
            ],
            "spec": [
              {
                "backend": [],
                "rule": [
                  {
                    "host": "api.eb35b5e724e996a0.convox.cloud",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "api",
                                "service_port": "8001"
                              }
                            ],
                            "path": "/kubernetes/.*"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": [
                  {
                    "hosts": [
                      "api.eb35b5e724e996a0.convox.cloud"
                    ],
                    "secret_name": "api-certificate"
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_eks_cluster.cluster",
            "module.cluster.aws_eks_node_group.cluster",
            "module.cluster.aws_iam_openid_connect_provider.cluster",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_ec2_readonly",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route.private-default",
            "module.cluster.aws_route.public-default",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_route_table_association.private",
            "module.cluster.aws_route_table_association.public",
            "module.cluster.aws_security_group.cluster",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current",
            "module.cluster.null_resource.delay_cluster",
            "module.cluster.null_resource.iam",
            "module.cluster.null_resource.network",
            "module.cluster.random_id.node_group",
            "module.rack.module.api.aws_iam_role.api",
            "module.rack.module.api.data.aws_iam_policy_document.assume_api",
            "module.rack.module.api.module.k8s.kubernetes_service.api",
            "module.rack.module.k8s.kubernetes_namespace.system",
            "module.rack.module.router.data.http.alias",
            "module.rack.module.router.kubernetes_service.router"
          ]
        }
      ]
    },
    {
      "module": "module.rack.module.api.module.k8s",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "csidriver3-system/api",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "service": "api",
                  "system": "convox"
                },
                "name": "api",
                "namespace": "csidriver3-system",
                "resource_version": "2460",
                "self_link": "/api/v1/namespaces/csidriver3-system/services/api",
                "uid": "1ae031cd-ed8d-48db-9454-b42d52ac5c20"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.92.242",
                "health_check_node_port": 0,
                "port": [
                  {
                    "name": "https",
                    "node_port": 0,
                    "port": 5443,
                    "protocol": "TCP",
                    "target_port": "5443"
                  },
                  {
                    "name": "kubernetes",
                    "node_port": 0,
                    "port": 8001,
                    "protocol": "TCP",
                    "target_port": "8001"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "service": "api",
                  "system": "convox"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_eks_cluster.cluster",
            "module.cluster.aws_eks_node_group.cluster",
            "module.cluster.aws_iam_openid_connect_provider.cluster",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_ec2_readonly",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route.private-default",
            "module.cluster.aws_route.public-default",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_route_table_association.private",
            "module.cluster.aws_route_table_association.public",
            "module.cluster.aws_security_group.cluster",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current",
            "module.cluster.null_resource.delay_cluster",
            "module.cluster.null_resource.iam",
            "module.cluster.null_resource.network",
            "module.cluster.random_id.node_group",
            "module.rack.module.k8s.kubernetes_namespace.system"
          ]
        }
      ]
    },
    {
      "module": "module.rack.module.k8s",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "system",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "csidriver3-system",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "system",
                  "rack": "csidriver3",
                  "system": "convox",
                  "type": "rack"
                },
                "name": "csidriver3-system",
                "resource_version": "2433",
                "self_link": "/api/v1/namespaces/csidriver3-system",
                "uid": "77153fe2-5a51-474b-a2fe-759cc3660af5"
              }
            ],
            "timeouts": {
              "delete": "30m"
            }
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_eks_cluster.cluster",
            "module.cluster.aws_eks_node_group.cluster",
            "module.cluster.aws_iam_openid_connect_provider.cluster",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_ec2_readonly",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route.private-default",
            "module.cluster.aws_route.public-default",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_route_table_association.private",
            "module.cluster.aws_route_table_association.public",
            "module.cluster.aws_security_group.cluster",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current",
            "module.cluster.null_resource.delay_cluster",
            "module.cluster.null_resource.iam",
            "module.cluster.null_resource.network",
            "module.cluster.random_id.node_group"
          ]
        }
      ]
    },
    {
      "module": "module.rack.module.metrics",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "metrics",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "kube-system/metrics-server",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "kubernetes.io/cluster-service": "true",
                  "kubernetes.io/name": "metrics-server"
                },
                "name": "metrics-server",
                "namespace": "kube-system",
                "resource_version": "2444",
                "self_link": "/api/v1/namespaces/kube-system/services/metrics-server",
                "uid": "56cf25ab-5988-4efb-acdf-0efaa04eafff"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.136.60",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "443"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "k8s-app": "metrics-server"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_eks_cluster.cluster",
            "module.cluster.aws_eks_node_group.cluster",
            "module.cluster.aws_iam_openid_connect_provider.cluster",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_ec2_readonly",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route.private-default",
            "module.cluster.aws_route.public-default",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_route_table_association.private",
            "module.cluster.aws_route_table_association.public",
            "module.cluster.aws_security_group.cluster",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current",
            "module.cluster.null_resource.delay_cluster",
            "module.cluster.null_resource.iam",
            "module.cluster.null_resource.network",
            "module.cluster.random_id.node_group"
          ]
        }
      ]
    },
    {
      "module": "module.rack.module.resolver.module.k8s",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "resolver",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "csidriver3-system/resolver",
            "metadata": [
              {
                "generation": 0,
                "name": "resolver",
                "namespace": "csidriver3-system",
                "resource_version": "2465",
                "self_link": "/api/v1/namespaces/csidriver3-system/services/resolver",
                "uid": "f1151cec-d7cf-487b-9213-962b5464ffde"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.183.157",
                "health_check_node_port": 0,
                "port": [
                  {
                    "name": "dns",
                    "node_port": 0,
                    "port": 53,
                    "protocol": "UDP",
                    "target_port": "5454"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "service": "resolver",
                  "system": "convox"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_eks_cluster.cluster",
            "module.cluster.aws_eks_node_group.cluster",
            "module.cluster.aws_iam_openid_connect_provider.cluster",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_ec2_readonly",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route.private-default",
            "module.cluster.aws_route.public-default",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_route_table_association.private",
            "module.cluster.aws_route_table_association.public",
            "module.cluster.aws_security_group.cluster",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current",
            "module.cluster.null_resource.delay_cluster",
            "module.cluster.null_resource.iam",
            "module.cluster.null_resource.network",
            "module.cluster.random_id.node_group",
            "module.rack.module.k8s.kubernetes_namespace.system"
          ]
        }
      ]
    },
    {
      "module": "module.rack.module.router",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "csidriver3-system/router",
            "load_balancer_ingress": [
              {
                "hostname": "a121edc50b3194d7c90ffc55e308cce5-778392767ac12122.elb.us-east-1.amazonaws.com"
              }
            ],
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout": "3600",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "nlb"
                },
                "generation": 0,
                "name": "router",
                "namespace": "csidriver3-system",
                "resource_version": "2630",
                "self_link": "/api/v1/namespaces/csidriver3-system/services/router",
                "uid": "121edc50-b319-4d7c-90ff-c55e308cce5a"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.244.48",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "load_balancer_source_ranges": [
                  "0.0.0.0/0"
                ],
                "port": [
                  {
                    "name": "http",
                    "node_port": 31038,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  },
                  {
                    "name": "https",
                    "node_port": 32224,
                    "port": 443,
                    "protocol": "TCP",
                    "target_port": "443"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "service": "ingress-nginx",
                  "system": "convox"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ]
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.cluster.aws_eip.nat",
            "module.cluster.aws_eks_cluster.cluster",
            "module.cluster.aws_eks_node_group.cluster",
            "module.cluster.aws_iam_openid_connect_provider.cluster",
            "module.cluster.aws_iam_role.cluster",
            "module.cluster.aws_iam_role.nodes",
            "module.cluster.aws_iam_role_policy_attachment.cluster_ec2_readonly",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_cluster",
            "module.cluster.aws_iam_role_policy_attachment.cluster_eks_service",
            "module.cluster.aws_iam_role_policy_attachment.nodes_ecr",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_cni",
            "module.cluster.aws_iam_role_policy_attachment.nodes_eks_worker",
            "module.cluster.aws_internet_gateway.nodes",
            "module.cluster.aws_nat_gateway.private",
            "module.cluster.aws_route.private-default",
            "module.cluster.aws_route.public-default",
            "module.cluster.aws_route_table.private",
            "module.cluster.aws_route_table.public",
            "module.cluster.aws_route_table_association.private",
            "module.cluster.aws_route_table_association.public",
            "module.cluster.aws_security_group.cluster",
            "module.cluster.aws_subnet.private",
            "module.cluster.aws_subnet.public",
            "module.cluster.aws_vpc.nodes",
            "module.cluster.data.aws_availability_zones.available",
            "module.cluster.data.aws_iam_policy_document.assume_ec2",
            "module.cluster.data.aws_iam_policy_document.assume_eks",
            "module.cluster.data.aws_partition.current",
            "module.cluster.null_resource.delay_cluster",
            "module.cluster.null_resource.iam",
            "module.cluster.null_resource.network",
            "module.cluster.random_id.node_group",
            "module.rack.module.k8s.kubernetes_namespace.system"
          ]
        }
      ]
    }
  ]
}